css/style.css
/*
 * This css file includes styles added in the jekyll port of this theme.
 * To find the original style.css that ships with Airspace, read airspace.css
 *
 */

 html {
  scroll-behavior: smooth;
  height: 100%;
}

body {
  height: 100%;
  overflow-x: hidden;
}
 
 .italic {
   font-style: italic;
 }

 .bold {
   font-weight: bold;
 }

 .center-text {
   text-align: center;
 }

.post-area {
  padding: 40px;
  width: 100%;
  min-height: 150px;
  background-color: white;
  border-bottom: 1px dotted #ddd;
}

.post-entry
{
	padding: 40px;
}

.post-entry a:link, .post-area a:visited {
  font-size: 30px;
  color: rgba(3, 92, 103, 0.8);
}

.post-area a:hover {
  color: #0D0017;
}

#slider:before {
	background: linear-gradient(to left, rgba(3, 92, 103, 1), rgb(138, 199, 206));
}

#slider {
	padding: 50px;
}

#global-header:before {
    background: linear-gradient(to left, rgba(3, 92, 103, 1), rgb(138, 199, 206));
}

.btn-call-to-action {
	color: #ffffff !important;
	background: #035c67 !important;
    font-weight: 600;
}

#call-to-action:before {
    /* background-color: rgb(138, 199, 206); */
    color: #ffffff;
}

.privacy ul {
  margin: 2rem 0;
  margin-left: 4rem
}

.privacy ul li {
  margin: 2rem 0;
  list-style-type: disc;
}

.privacy ul ol {
  margin: 2rem 0;
  list-style-type: decimal;
}

.privacy ul ul {
  margin: 2rem 0;
  margin-left: 8rem;
}

.privacy ul ul li {
  list-style-type: circle;
}

.privacy table {
  margin: 2rem auto;
}

.privacy table,
.privacy tr,
.privacy th {
  border: 1px solid black;
  padding: 1rem;
  text-align: center;
}

.privacy table ul {
  margin: 0;
  padding: 2rem;
}

.privacy-input {
  display: flex;
}

.privacy-input input {
  margin: 0;
  width: 7%;
}

.privacy-input p {
  margin: auto;
}

.privacy-input p a {
  color: rgb(138, 199, 206);
}

#global-header {
    padding: 50px 0px;
}

#service .service-item i {
    color: #035c67 !important;
}

#service .service-item h4 {
    color: #035c67 !important;
}

#global-header .block {
    padding-left: 0px !important;
}

#intro {
    padding: 30px 0;
}

header {
	position: fixed;
    top: 0;
    height: 90px;
    z-index: 100;
    width: 100%;
}

#footer {
    width: 100%;
    padding-bottom: 56px;
}

#footer .row {
  display: flex;
}

@media ( max-width : 767px) {
	#footer .row {
    display: block;
  }
}

#footer .row .col {
  margin: auto;
}

#footer .nav {
  float: none !important;
}

#footer .nav li {
  display: block;
  float: none;
  text-align: center;
  margin: auto;
}

#footer a {
  display: block;
}

#footer p,
#footer img,
#footer ul {
  padding-bottom: 24px;
}

#footer p:last-of-type {
  padding-bottom: 0;
}

#footer .row:last-of-type {
  margin-bottom: 40px;
}

#footer .informative-texts-link {
  color: #919191;
  font-size: 12px;
}

ul.share-buttons{
  list-style: none;
  padding: 0;
}

ul.share-buttons li{
  display: inline;
}

ul.share-buttons .sr-only{
  position: absolute;
  clip: rect(1px 1px 1px 1px);
  clip: rect(1px, 1px, 1px, 1px);
  padding: 0;
  border: 0;
  height: 1px;
  width: 1px;
  overflow: hidden;
}

.social-buttons {
	color: #035c67;
	padding: 20px;
	position: fixed;
	bottom: 0;
	width: 100%;
	height: 100px;
    z-index: 100;
	background-image: linear-gradient(#FFFFFF00, white);
	pointer-events: none;
}

.social-buttons a {
	color: #035c67;
}

.social-buttons-inner {
	margin: auto;
	width: 200px;
	height: 100%;
    padding-top: 32px;
}

.client-li {
  width: 100% !important;
  margin: auto !important;
  text-align: center;
  margin-bottom: 80px !important;
}

.client-li a {
  color: #035c67 !important;
  display: inline-block !important;
  width: 30px;
}

.client-li a i {
  font-size: 20px;
}

.client-img {
  animation: createBox 1s;
  width: 100px !important;
  border-radius: 20px;
}

@keyframes createBox {
  from {
    transform: scale(0);
    opacity: 0;
  }
  to {
    transform: scale(1);
    opacity: 1;
  }
}

.autor {
  margin: auto;
  width: max-content;
}

.post .autor h1 {
  color: #035c67;
  border-bottom: 3px solid #035c67;
  padding-bottom: 5px;
  font-weight: bold;
  margin-left: 3rem;
  padding-right: 2rem;
  width: min-content;
}

.post .autor h2 {
  color: #035c67;
  font-weight: bold;
  font-size: 22px;
  display: inline-block;
  margin-right: 2rem;
  margin-bottom: 0;
}

.post .autor i {
  display: inline-block;
  color: #035c67;
  font-size: 22px;
}

.post .autor h3 {
  color: #035c67;
  font-size: 22px;
  margin-top: 1rem;
}

.post .autor .categorias {
  margin-top: 1rem;
}

.post .autor .categorias ul {
  margin-top: 1rem;
}

.post .autor .categorias a {
  color: #035c67;
  font-size: 16px;
}

.post .view_more {
  color: #035c67;
  font-style: italic;
}

.post .content h2, 
.post .content p {
  text-align: justify;
  padding-top: 20px !important;
  margin-bottom: 10px !important;
}

.post .content p:first-of-type{
  margin-top: 0 !important;
  padding-top: 0 !important;
}

.post .content ul {
  list-style-type: disc;
}

.post .content ul,
.post .content ol {
  padding-top: 2rem;
  padding-left: 2rem;
}

.post .content li {
  margin-bottom: 1rem;
}

.float-right {
  float: right;
}

.size-adjust {
  max-width: max-content;
}

/* Landings */

.landing-call-to-action {
  background: rgb(3,92,103) !important;
  background: linear-gradient(90deg, rgba(3,92,103,1) 0%, rgba(15,111,122,1) 20%, rgba(178,231,237,1) 100%) !important;
}

.landing button,
.landing a.btn {
  background-color:	#A28723 !important;
}

.landing-call-to-action h1,
.landing-call-to-action h3 {
  font-size: 26px !important;
  margin-top: 0;
  margin-bottom: 20px;
  color: #F6D450;
}

.landing-call-to-action h1,
.landing-call-to-action h2,
.landing-call-to-action h3 {
  text-align: left;
}

.landing-call-to-action p {
  text-align: left;
  font-size: 18px !important;
  margin-bottom: 20px;
}

.landing-call-to-action li {
  text-align: left;
  font-size: 18px !important;
  margin-bottom: 20px;
  list-style-type: disc;
}

.landing .landing-service-item {
  border-radius: 20px;
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
  max-width: fit-content;
  height: 100%;
  margin: auto;
  padding: 3rem;
}

.landing .landing-service-item a {
  color: white;
  font-weight: bold;
  font-size: 18px;
  margin-top: 2rem;
}

.landing .landing-service-item a:focus {
  outline: initial;
  outline-offset: initial;
}

.landing .landing-service-item h4 {
  padding-top: 0 !important;
  text-transform: uppercase;
  letter-spacing: 6px;
}

.landing .landing-service-item p {
  display: inline-block;
}

.landing .landing-service-item .price {
  font-size: 38px !important;
  font-weight: bold;
}

.landing .landing-service-item ul {
  padding: 0 15%;
}

.landing .landing-service-item li {
  list-style-type: disc;
  margin-bottom: 1rem;
  text-align: left;
}

.landing .landing-service-item li:first-child {
  margin-top: 1rem;
}

.landing .landing-service-item li:last-of-type {
  margin-bottom: 0;
}

.landing .responsive-contact {
  display: none;
}

@media ( max-width : 430px) {
  .landing-header-content a {
    display: none;
  }

  .landing-header-content a:first-of-type {
    display: block;
    text-align: center;
  }

  .landing form button {
    font-size: 15px !important;
  }

  .landing .responsive-contact {
    display: block;
  }

  .landing .responsive-contact a {
    float: none;
    display: block;
    width: 100%;
    margin: auto;
  }

  .landing .responsive-contact img {
    padding: 2rem;
  }
}

